objects/CSS_WS_US_Details__c.object
<CustomObject>
    <fields>
        <fullName>CSS_WS_Claim__c</fullName>
        <label>CSS WS Claim</label>
        <referenceTo>CSS_WS_Warranty__c</referenceTo>
        <relationshipLabel>CSS WS US Details</relationshipLabel>
        <relationshipName>CSS_WS_US_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Claimed_Price__c</fullName>
        <label>Claimed Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Description__c</fullName>
        <label>Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_OC_Adjustment_Reason__c</fullName>
        <label>OC Adjustment Reason</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_OC_Approved_Amount__c</fullName>
        <label>OC Approved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Part_Adjustment_Percentage__c</fullName>
        <label>Part Adjustment Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Part_Adjustment_Reason__c</fullName>
        <label>Part Adjustment Reason</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Part_Number_Long__c</fullName>
        <label>Part Number Long</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Part_Number__c</fullName>
        <label>Part Number US</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_SRT_Access_Code__c</fullName>
        <label>SRT Access Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_SRT_Adjustment_Percentage__c</fullName>
        <label>SRT Adjustment Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_SRT_Adjustment_Reason__c</fullName>
        <label>SRT Adjustment Reason</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_SRT_Code__c</fullName>
        <label>SRT Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_SRT_Hours__c</fullName>
        <label>SRT Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Siebel_Price__c</fullName>
        <label>Siebel Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Total_Price__c</fullName>
        <formula>CSS_WS_Price__c * CSS_WS_Quantity__c</formula>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Type_Section__c</fullName>
        <label>Type Section</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>SRTs</fullName>
                </value>
                <value>
                    <fullName>Other Claimables</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CSS WS US Details</label>
    <nameField>
        <label>CSS_WS_US_Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS WS US Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>